# rione_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Command.msg  Location.msg  PredictResult.msg  Request.msg
srv/: RequestFaceDetection.srv  RequestLocation.srv
